# trackfw

./: .gitignore  .goreleaser.yaml  CLAUDE.md  Makefile  README.md  demo.tape  go.mod  go.sum
.claude/commands/: adr.md  status.md  validate.md
.gemini/commands/: req.md  roadmap.md
.github/workflows/: deploy-docs.yml  quality.yml  release.yml
Formula/: trackfw.rb
cmd/trackfw/: main.go
docs/: agents-working-context.md  cli-parity.md  pre-release-v0.1.0.md
docs/adr/: ADR-2026-07-18-catalogo-canonico-e-adapters-para-integracoes-de-agentes.md  ADR-2026-07-19-antigravity-agent-tools.md  ADR-2026-07-19-global-adrs-governance.md
docs/analise-cmdb/: README.md  achado-upstream-id-rastreabilidade-e-json.md  achado-upstream-rules-req-configuraveis.md  achado-v2.5.1-traceid-nao-suporta-by-agent.md  achado-v2.5.2-req-indexing-by-agent-incompleto.md  achado-v2.5.3-residual-context-req-flat.md  achados-v2.4.0-baseline-warnings-e-config.md  achados-v2.5.0-json-fields-e-docs.md  analise-comparativa-gates-governanca.md  evolucao-generica-baseline-legado.md
docs/req/: REQ-2026-06-20-attention-hooks-agent-clis.md  REQ-2026-06-20-gate-pre-trabalho-branch-wip-roadmap-e-fallback-husky-node.md  REQ-2026-07-18-agents-skills-lifecycle-multi-cli.md  REQ-2026-07-19-corrigir-render-antigravity-com-tools-validos-e-model-tier-do-agy.md  REQ-2026-07-19-global-adrs-governance.md  REQ-2026-07-20-corrigir-attention-hooks-e-hardening-pos-auditoria-pr56-pr57.md  REQ-2026-07-20-hardening-qualidade-attention-hooks-pos-pr59.md
docs/roadmaps/: .trackfw-log  ROADMAP-2026-06-19-architect-command-guidelines.md  ROADMAP-2026-06-20-attention-hooks-agent-clis.md  ROADMAP-2026-07-19-global-adrs-governance.md
docs/schema/: adr.schema.json  req.schema.json  roadmap.schema.json
docs/visao-projeto/: VISION.md
internal/ai/: anthropic.go  client.go  client_test.go  config.go  fake.go  openai.go
internal/commands/: adr.go  agents.go  agents_skills_test.go  amazonq.go  baseline.go  configure.go  context.go  copilot.go  cursor.go  discover.go  discover_test.go  gemini.go  help.go  help_test.go  init.go  integrations_flags.go  log.go  metrics.go  plugins.go  req.go  roadmap.go  root.go  serve.go  skills.go  status.go  sync.go  update.go  validate.go  validate_json_test.go  version.go  windsurf.go
internal/config/: config.go  config_evolution_test.go  config_namespacing_test.go  config_paths_test.go  config_test.go
internal/discover/: discover.go  discover_test.go
internal/generators/: adr.go  adr_test.go  agentfiles.go  agentfiles_test.go  agents.go  agents_test.go  amazonq.go  amazonq_test.go  claudemd.go  claudemd_test.go  codex.go  codex_test.go  commitmsghook_test.go  context.go  context_test.go  copilot.go  copilot_test.go  cursor.go  cursor_test.go  gemini.go  gemini_test.go  hooks.go  hooks_test.go  java.go  nextsteps.go  probes.go  probes_test.go  req.go  req_test.go  roadmap.go  roadmap_test.go  scaffold.go  scaffold_parity_test.go  scaffold_test.go  update.go  update_test.go  windsurf.go  windsurf_test.go
internal/i18n/: i18n.go
npm/: package-lock.json  package.json
pypi/: README.md  pyproject.toml
pypi/tests/: test_agents_skills.py  test_baseline.py  test_codex.py  test_commands_basic.py  test_commands_extras.py  test_commands_roadmap_discover.py  test_commands_validate_status.py  test_config.py  test_context_req_by_agent.py  test_discover.py  test_generators_adr.py  test_generators_init.py  test_generators_req.py  test_generators_roadmap.py  test_help.py  test_i18n.py  test_namespacing.py  test_req_by_agent.py  test_rules_agents.py  test_rules_req_configuraveis.py  test_serve_api.py  test_traceid.py  test_validate_json.py  test_validator.py
pypi/trackfw/: __init__.py  __main__.py  _cli.py  cli.py  config.py  traceid.py  validator.py
pypi/trackfw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
pypi/trackfw/commands/: __init__.py  adr.py  agents.py  baseline.py  configure.py  context.py  discover.py  help_cmd.py  init.py  log.py  metrics.py  plugins.py  req.py  roadmap.py  serve.py  skills.py  status.py  sync.py  update.py  validate.py
pypi/trackfw/generators/: adr.py  codex.py  hooks.py  init_gen.py  req.py  roadmap.py
pypi/trackfw/i18n/: __init__.py
pypi/trackfw/integrations/: __init__.py  catalog.py  command.py  legacy.py  manager.py  renderers.py
pypi/trackfw/integrations/assets/agents/: code-quality.md  ux.md
pypi/trackfw/serve/: __init__.py  api_attention.py  api_board.py  api_chain.py  api_file.py  api_metrics.py
pypi/trackfw/serve/static/: index.html
scripts/: check-cli-parity.sh  check-integration-assets.sh  check-integration-cli-parity.sh  check-static-assets.sh  check-validate-parity.sh  install.sh  smoke-integration-packages.sh  sync-integration-assets.sh
site/: index.md  package-lock.json  package.json
(+336 files in other folders)
