[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trackfw"
version = "0.0.0-dev"
description = "Governed software delivery framework: ADR → REQ → ROADMAP → kanban"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["cli", "adr", "roadmap", "governance", "delivery"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/kgsaran/trackfw"
Repository = "https://github.com/kgsaran/trackfw"

[project.scripts]
trackfw = "trackfw.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["trackfw*"]

[tool.setuptools.package-data]
trackfw = [
    "serve/static/*.html",
    "serve/static/*.js",
    "serve/static/*.css",
]
