[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trackfw"
version = "0.0.0-dev"
description = "Governance CLI for AI-native software delivery. Enforces traceability: ADR → REQ → ROADMAP → kanban. Pre-commit gate + CI integration. Native support for Claude Code, Gemini CLI, Cursor, Copilot, Windsurf, Amazon Q."
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
requires-python = ">=3.10"
keywords = [
  "cli", "adr", "architecture-decision-records", "roadmap", "governance",
  "software-delivery", "devops", "ai-agents", "developer-tools", "kanban",
  "traceability", "software-governance", "ai-governance", "pre-commit",
  "developer-experience", "technical-debt", "claude-code", "gemini",
  "cursor", "copilot", "trackfw"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Version Control",
  "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/kgsaran/trackfw"
Repository = "https://github.com/kgsaran/trackfw"

[project.scripts]
trackfw = "trackfw.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["trackfw*"]

[tool.setuptools.package-data]
trackfw = [
    "serve/static/*.html",
    "serve/static/*.js",
    "serve/static/*.css",
]
